Fixes: Resolved the responsive issue seen on mobile devices.

--- a/v2/src/components/About.module.css
+++ b/v2/src/components/About.module.css
@@ -55,6 +55,7 @@
 
     .profileImage {
         margin: 0 auto;
+        height: 320px;
     }
 }
 
